# snakelite

./: README.md  pyproject.toml
src/snakelite/: settings.py
src/snakelite/entities/: food.py
src/snakelite/entities/food/: base.py  bomb_food.py  slowdown_food.py
src/snakelite/entities/player/: snake.py
src/snakelite/systems/: combat.py
src/snakelite/ui/: renderer.py
